FG Update darks

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Personal wepage"
+title                    : "Felipe Gran"
 title_separator          : "-"
 name                     : &name "Felipe Gran"
 description              : &description "Service mode PhD student in astronomy"
