--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "FGran_Gran1_zoom_in_IA.png"
   bio              : "Service mode PhD student in astronomy"
   location         : "Santiago, Chile"
-  employer         : [PUC](https://astro.uc.cl/)/[MAS](https://www.astrofisicamas.cl/en/)/[ESO Chile](https://www.eso.org/public/)
+  employer         : "[PUC](https://astro.uc.cl/)/[MAS](https://www.astrofisicamas.cl/en/)/[ESO Chile](https://www.eso.org/public/)"
   pubmed           : 
   googlescholar    : 
   email            : "fegran@uc.cl"
