--- a/_config.yml
+++ b/_config.yml
@@ -181,8 +181,8 @@ collections:
   publications:
     output: true
     permalink: /:collection/:path/
-  portfolio:
-    output: false
+  games:
+    output: true
     permalink: /:collection/:path/
   talks:
     output: true
@@ -227,10 +227,10 @@ defaults:
       author_profile: true
       share: false
       comments: true
-  # _portfolio
+  # _games
   - scope:
       path: ""
-      type: portfolio
+      type: games
     values:
       layout: single
       author_profile: true
