--- a/_config.yml
+++ b/_config.yml
@@ -194,7 +194,79 @@ collections:
 
 
 # Defaults
+# defaults:
+#   - scope:
+#       path: ""
+#       type: publications
+#     values:
+#       layout: single
+#       author_profile: true
+#       share: false
+#       comments: true
+#   # _talks
+#   - scope:
+#       path: ""
+#       type: talks
+#     values:
+#       layout: single
+#       author_profile: true
+#       share: false
+#   # _games
+#   - scope:
+#       path: ""
+#       type: games
+#     values:
+#       layout: single
+#       author_profile: true
+#       share: false
+#       comment: true
+#   # _talks
+#   - scope:
+#       path: ""
+#       type: ideas
+#     values:
+#       layout: single
+#       author_profile: true
+#       share: false
+#   # _cv
+#   - scope:
+#       path: ""
+#       type: cv
+#     values:
+#       layout: single
+#       author_profile: true
+#       share: false
+
+# Defaults
 defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: false
+      related: true
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+  # # _teaching
+  # - scope:
+  #     path: ""
+  #     type: teaching
+  #   values:
+  #     layout: single
+  #     author_profile: true
+  #     share: false
+  #     comments: true
+  # _publications
   - scope:
       path: ""
       type: publications
@@ -203,14 +275,6 @@ defaults:
       author_profile: true
       share: false
       comments: true
-  # _talks
-  - scope:
-      path: ""
-      type: talks
-    values:
-      layout: single
-      author_profile: true
-      share: false
   # _games
   - scope:
       path: ""
@@ -223,17 +287,9 @@ defaults:
   # _talks
   - scope:
       path: ""
-      type: ideas
+      type: talks
     values:
-      layout: single
-      author_profile: true
-      share: false
-  # _cv
-  - scope:
-      path: ""
-      type: cv
-    values:
-      layout: single
+      layout: talk
       author_profile: true
       share: false
 
