FG Update for meeting

--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ author:
   github           : "fegran"
   google_plus      :
   keybase          :
-  instagram        :
+  instagram        : "fegranm"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : "felipe-gran-308584204"
